feat: implement visiting section

--- a/museum/index.html
+++ b/museum/index.html
@@ -35,45 +35,45 @@
       <section class="welcome welcome_bg-dark">
         <div class="welcome__container container ">
           
-          <div class="welcome__slider">
-            <div class="welcome__slider-wrapper">
-              <div class="welcome__slider-inner">
-                <div class="welcome__slide">
+          <div class="slider welcome__slider">
+            <div class="slider__wrapper">
+              <div class="slider__inner">
+                <div class="slider__slide">
                   <img src="assets/img/welcome-slider/1.jpg" alt="picture">
                 </div>
-                <div class="welcome__slide">
+                <div class="slider__slide">
                   <img src="assets/img/welcome-slider/2.jpg" alt="picture">
                 </div>
-                <div class="welcome__slide">
+                <div class="slider__slide">
                   <img src="assets/img/welcome-slider/3.jpg" alt="picture">
                 </div>
-                <div class="welcome__slide">
+                <div class="slider__slide">
                   <img src="assets/img/welcome-slider/4.jpg" alt="picture">
                 </div>
-                <div class="welcome__slide">
+                <div class="slider__slide">
                   <img src="assets/img/welcome-slider/5.jpg" alt="picture">
                 </div>
               </div>
             </div>
             
-            <div class="welcome__slider-counter">
-              <span class="welcome__slider-num" id="current">03</span>
+            <div class="slider__counter">
+              <span class="slider__num" id="current">03</span>
               |
-              <span class="welcome__slider-num" id="total">04</span>
-              <ul class="welcome__carousel-indicators"></ul>
-              <div class="welcome__slider-prev">
+              <span class="slider__num" id="total">04</span>
+              <ul class="slider__carousel-indicators"></ul>
+              <div class="slider__prev">
                 <img src="assets/svg/before.svg" alt="prev" data-arrow>
               </div>
-              <div class="welcome__slider-next">
+              <div class="slider__next">
                 <img src="assets/svg/after.svg" alt="next" data-arrow>
               </div>
             </div>
           </div>
 
-            <h1 class="welcome__section-title section-title section-title_light">
+            <h1 class="welcome__title title title_light">
               Welcome to&nbsp;the&nbsp;Louvre
             </h1>
-            <p class="welcome__section-subtitle section-subtitle section-subtitle_light">
+            <p class="welcome__subtitle subtitle subtitle_light">
               From the castle to the museum
             </p>
             <a
@@ -81,6 +81,50 @@
               href="https://www.google.com/maps/@48.8618159,2.3366818,3a,75y,81.55h,73.4t/data=!3m7!1e1!3m5!1sAF1QipOVxZQuSy3Bx9T_HpH_7FtBHDTXvI6SF-A10ocT!2e10!3e12!7i5472!8i2736">
               Discover the Louvre
             </a>
+        </div>
+      </section>
+
+      <section class="visiting" id="visiting">
+        <div class="visiting__container container">
+          <h2 class="visiting__title title title_gold underline">Virtual tour</h2>
+          <div class="cards">
+            <a href="./tours/tour1.html" class="card" target="_blank">
+              <img class="card__img" src="assets/img/visiting-cards/card1.jpg" alt="Royal Palace">
+              <h3 class="card__title underline">Royal Palace</h3>
+              <p class="card__vr">360° Virtual Tour</p>
+              <p class="card__googl-street">Google Street Panorama View</p>
+            </a>
+            <a href="tours/tour2.html" class="card" target="_blank">
+              <img class="card__img" src="assets/img/visiting-cards/card2.jpg" alt="Denon Wing">
+              <h3 class="card__title underline">Denon Wing</h3>
+              <p class="card__vr">360° Virtual Tour</p>
+              <p class="card__googl-street">Google Street Panorama View</p>
+            </a>
+            <a href="tours/tour3.html" class="card" target="_blank">
+              <img class="card__img" src="assets/img/visiting-cards/card3.jpg" alt="Colonnade Perrault">
+              <h3 class="card__title underline">Colonnade Perrault</h3>
+              <p class="card__vr">360° Virtual Tour</p>
+              <p class="card__googl-street">Google Street Panorama View</p>
+            </a>
+            <a href="tours/tour4.html" class="card" target="_blank">
+              <img class="card__img" src="assets/img/visiting-cards/card4.jpg" alt="Greek hall">
+              <h3 class="card__title underline">Greek hall</h3>
+              <p class="card__vr">360° Virtual Tour</p>
+              <p class="card__googl-street">Google Street Panorama View</p>
+            </a>
+            <a href="tours/tour5.html" class="card" target="_blank">
+              <img class="card__img" src="assets/img/visiting-cards/card5.jpg" alt="Mona Lisa">
+              <h3 class="card__title underline">Mona Lisa</h3>
+              <p class="card__vr">360° Virtual Tour</p>
+              <p class="card__googl-street">Google Street Panorama View</p>
+            </a>
+            <a href="tours/tour6.html" class="card" target="_blank">
+              <img class="card__img" src="assets/img/visiting-cards/card6.jpg" alt="Night Palace">
+              <h3 class="card__title underline">Night Palace</h3>
+              <p class="card__vr">360° Virtual Tour</p>
+              <p class="card__googl-street">Google Street Panorama View</p>
+            </a>
+          </div>
         </div>
       </section>
     </main>
