--- a/museum/index.html
+++ b/museum/index.html
@@ -127,6 +127,31 @@
           </div>
         </div>
       </section>
+      <section class="explore explore_bg-dark" id="explore">
+        <div class="container explore__container">
+          <div class="explore__description">
+            <h2 class="title explore__title title_light underline">Picture explore</h2>
+            <p class="text explore__text">
+              Las Meninas is a 1656 painting by Diego Velázquez, the leading artist&nbsp;of the Spanish Golden Age.
+            </p>
+            <p class="text explore__text">It was cleaned in 1984 to remove a <span class="explore__text_yellow">"yellow veil"</span> of dust that had gathered since the previous restoration in the 19th century.</p>
+            <p class="text explore__text">The cleaning provoked furious protests, not because the picture had been damaged in any way, but because it looked different.</p>
+          </div>
+
+          <div class="compare">
+            <div class="compare__slider">
+              <div class="compare__before-image">
+                <img class="compare__img" src="assets/img/explore-slider/before.jpg" alt="before">
+              </div>
+            
+              <div class="compare__after-image">
+                <img class="compare__img" src="assets/img/explore-slider/after.jpg" alt="after">
+              </div>
+          
+              <div class="resizer"></div>
+          </div>
+        </div>
+      </section>
     </main>
     <script src="js/index.js"></script>
   </body>
