--- a/museum/index.html
+++ b/museum/index.html
@@ -171,7 +171,7 @@
           </div>
 
           <div class="video__player player">
-            <div class="player__wrapper player__wrapper-before"></div>
+            <button class="player__wrapper player__wrapper-before"></button>
             <video class="player__video" src="assets/video/video0.mp4" poster="assets/video/poster0.jpg" preload="metadata"></video>
             <div class="player__panel">
                 <img class="player__play-button" src="assets/svg/play.svg" alt="play">
@@ -181,8 +181,33 @@
                 <img class="player__expand-button" src="assets/svg/expand.svg" alt="expand">
             </div>
           </div>
-          <div class="video__slider slider">
-            <div class="splide">
+          <div class="video__slider vslider">
+            <div class="vslider__videos">
+              <iframe loading="lazy" width="452" height="254" src="https://www.youtube.com/embed/zp1BXPX8jcU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe loading="lazy" width="452" height="254" src="https://www.youtube.com/embed/Vi5D6FKhRmo" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe loading="lazy" width="452" height="254" src="https://www.youtube.com/embed/NOhDysLnTvY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div class="vslider__control">
+              <button class="vslider__prev">
+                <svg width="10" height="12" viewBox="0 0 10 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M5.4777 0.219168C5.87773 0.564178 5.94259 1.19347 5.62256 1.62473L2.37578 6.00004L5.62256 10.3753C5.94259 10.8066 5.87773 11.4359 5.4777 11.7809C5.07766 12.1259 4.49394 12.056 4.17391 11.6247L0 6.00004L4.17391 0.375342C4.49394 -0.0559202 5.07766 -0.125842 5.4777 0.219168ZM9.65184 0.219168C10.0519 0.564178 10.1167 1.19347 9.7967 1.62473L6.54992 6.00004L9.7967 10.3753C10.1167 10.8066 10.0519 11.4359 9.65184 11.7809C9.2518 12.1259 8.66808 12.056 8.34806 11.6247L4.17414 6.00004L8.34806 0.375342C8.66808 -0.0559202 9.2518 -0.125842 9.65184 0.219168Z" fill="#999999"/>
+                </svg>                  
+              </button>
+              <div class="vslider__dots">
+                <span class="vslider__dot active"></span>
+                <span class="vslider__dot"></span>
+                <span class="vslider__dot"></span>
+                <span class="vslider__dot"></span>
+                <span class="vslider__dot"></span>
+              </div>
+              <button class="vslider__next">
+                <svg width="10" height="12" viewBox="0 0 10 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M0.348163 0.219168C0.748196 -0.125842 1.33192 -0.0559202 1.65195 0.375342L5.82586 6.00004L1.65194 11.6247C1.33192 12.056 0.748195 12.1259 0.348162 11.7809C-0.0518709 11.4359 -0.116729 10.8066 0.203297 10.3753L3.45008 6.00004L0.203298 1.62473C-0.116728 1.19347 -0.05187 0.564177 0.348163 0.219168ZM4.5223 0.219168C4.92234 -0.125841 5.50606 -0.0559197 5.82609 0.375342L10 6.00004L5.82609 11.6247C5.50606 12.056 4.92234 12.1259 4.5223 11.7809C4.12227 11.4359 4.05741 10.8066 4.37744 10.3753L7.62422 6.00004L4.37744 1.62473C4.05741 1.19347 4.12227 0.564178 4.5223 0.219168Z" fill="#999999"/>
+                </svg>                  
+              </button>
+            </div>
+            
+            <!-- <div class="splide">
               <div class="splide__track">
                 <ul class="splide__list">
                   <li class="splide__slide"><iframe loading="lazy" width="452" height="254" src="https://www.youtube.com/embed/Vi5D6FKhRmo" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
@@ -190,7 +215,7 @@
                   <li class="splide__slide"><iframe loading="lazy" width="452" height="254" src="https://www.youtube.com/embed/Vi5D6FKhRmo" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
                 </ul>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </section>
