fix: add github link and change img path

--- a/museum/index.html
+++ b/museum/index.html
@@ -355,7 +355,7 @@
       <div class="container footer-bottom">
           <div class="footer__date date">&copy;2021</div>
           <a class="footer__school link" href="https://rs.school/js/">The Rolling Scopes School</a>
-          <a class="footer__author link">Katia Zakharina</a>
+          <a class="footer__author link" href="https://github.com/KatiaZakharina">Katia Zakharina</a>
       </div>
     </footer>
 
