fix: fix nav burger

--- a/museum-adaptive/index.html
+++ b/museum-adaptive/index.html
@@ -36,7 +36,7 @@
     </header>
 
       
-    <section class="a-nav a-nav__modal modal" data-modal-window data-a-nav>
+    <section class="a-nav__modal modal" data-modal-window data-a-nav>
       <div class="container modal__container a-nav__container" data-a-nav>
           <div class="modal__content a-nav__content">
               <nav class="a-nav__nav" >
@@ -53,8 +53,8 @@
                     <div class="a-nav__image a-nav__image_2"></div>
                     <div class="a-nav__image a-nav__image_3"></div>
                   </div>
-                  <hr class="a-nav__hr">
-                  <ul class="socials footer__socials">
+                  <hr class="a-nav__hr a-nav__images_s_show">
+                  <ul class="socials footer__socials footer__socials_s_show">
                     <li class="socials__button">
                       <a class="link socials__link" href="https://www.youtube.com/user/louvre">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
