fix: fix form adaptive-420px

--- a/museum-adaptive/index.html
+++ b/museum-adaptive/index.html
@@ -54,7 +54,7 @@
                     <div class="a-nav__image a-nav__image_3"></div>
                   </div>
                   <hr class="a-nav__hr a-nav__images_s_show">
-                  <ul class="socials footer__socials footer__socials_s_show">
+                  <ul class="socials a-nav__socials a-nav__socials_s_show">
                     <li class="socials__button">
                       <a class="link socials__link" href="https://www.youtube.com/user/louvre">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
